--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.6.0
 attrs==22.2.0
-btrfsutil==6.1.3
+btrfsutil==6.2.1
 cairocffi==1.4.0
 certifi==2022.12.7
 cffi==1.15.1
@@ -8,10 +8,12 @@ charset-normalizer==3.0.1
 configobj==5.1.0.dev0
 coreapi==2.3.3
 coreschema==0.0.4
-cryptography==39.0.1
+coverage==7.2.1
+cryptography==39.0.2
 cupshelpers==1.0
 defusedxml==0.7.1
 Django==4.1.7
+django-cors-headers==3.14.0
 django-guardian==2.4.0
 django-ranged-response==0.2.0
 django-simple-captcha==0.5.17
@@ -26,6 +28,7 @@ itypes==1.2.0
 Jinja2==3.1.2
 libfdt==1.6.1
 MarkupSafe==2.1.2
+mock==5.0.1
 msgpack==1.0.4
 oauthlib==3.2.2
 packaging==23.0
